# xo-connect5

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
docker/: docker-compose.yml
docker/keycloak/: docker-compose.yml
docker/node/: Dockerfile
manifests/: xo-app-pod.yaml  xo-app-svc.yaml  xo-debug-pod.yaml  xo-redis-pod.yaml  xo-redis-svc.yaml
src/xo_connect5/: board.py  exceptions.py  handlers.py  keycloak.py  main.py  models.py  openid_client.py  redis.py  settings.py
src/xo_connect5/core/: main.py  old.js  redis.py
src/xo_connect5/exceptions/: app.py  pieces.py  players.py
src/xo_connect5/models/: __init__.py  boards.py  pieces.py  users.py
src/xo_connect5/routers/: pieces.py
src/xo_connect5/routers/board/: __init__.py  boards.py  pieces.py
src/xo_connect5/routers/boards/: __init__.py  board.py  boards.py  pieces.py  players.py
src/xo_connect5/utils/: logger.py
tests/: __init__.py  conftest.py  helpers.py  test_board.py  test_boards.py  test_pieces.py  test_players.py
